Test/errors/err_delete_borrowed_owned_element.cb
// A `list<unique B*>` OWNS its elements: the container's destructor frees each one. Binding an
// element borrow to a named local (`B* g = l.get(0)`) and then deleting it double-frees - the
// list frees the same pointee again at teardown. The direct-call form (`delete l.get(0)`) was
// already caught; this pins the named-local (laundered) form. Remedy: removeAt through the owner.
import "list.cb";

struct B { int v = 0; ~B() { printf("bdtor\n"); } };

expect_error("borrows an element that its container owns") {
    void leak() {
        list<unique B*> l;
        l.add(new B());
        B* g = l.get(0);
        delete g;
    }
}

// Recovering a BARE-pointer element slot through a borrowed node pointer yields a BORROW
// (recovery clears IsOwning/IsNewAllocated), so deleting it is rejected: the caller may own
// the pointee. `move n->values[i]` is now legal for the slot, but `delete taken` is not.
struct SlotNode<K, V> { V values[16] = default; int count = 0; };
expect_error("cannot delete 'taken' - it aliases borrowed parameter 'n'") {
    void deleteRecoveredBorrow(SlotNode<int, B*>* n, int i) {
        B* taken = move n->values[i];
        delete taken;
    }
}

extern int main() { return 0; }
